@@ -1,5 +1,11 @@
 2004-06-06 Kalle Wallin <kaw@linux.se>
 	* i18n: ncmpc is now bilingual (sv)
+	* Moved all locale initialization code to main.c
+	* main.c: added bind_textdomain_codeset() 	
+	* Added wreadln.c, wreadln.h a simple line editor
+	* screen_utils.c: use wreadln() instead of curses wgetstr()
+	* Added a history for the find command!
+
 
 2004-06-05 Kalle Wallin <kaw@linux.se>
 	* Added initial i18n support
